bun i @electric-sql/pglite@next

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@electric-sql/pglite": "^0.3.0-next.1",
     "@electric-sql/pglite-react": "1.0.0-next.1",
     "@electric-sql/pglite-sync": "1.0.0-next.1",
     "@electric-sql/react": "1.0.3",
